--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -34,3 +34,7 @@ $base-border: 2px solid $base-border-color;
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow;
+
+//Nav
+$nav-radius: 6px;
+$dropdown-bg: #fff;
