--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,9 @@ layout: default
             </span>
         </div>
     </div>
-    <article class="wrapper">
-        {{ content }}
-    </article>
-
+    <div class="wrapper">
+      <article>
+          {{ content }}
+      </article>
+    </div>
 </div>
