--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -16,7 +16,7 @@ h6 {
   font-family: $heading-font-family;
   font-size: $base-font-size;
   line-height: $heading-line-height;
-  margin: 0 0 $small-spacing;
+  margin: $base-spacing 0 $small-spacing 0;
 }
 
 p {
