news feed (using resources)

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@ aside: true
       </article>
       {% if layout.aside == true %}
       <aside>
-        <a href="http://eepurl.com/bObmsT">Sign up for the OpenBudgets Newsletter!</a>
+        {% include aside.html %}
       </aside>
       {% endif %}
     </div>
