--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,13 @@
+<nav class="footer-nav">
+  <ul>
+    {% for item in site.data.secondary-menu %}
+    <li{% if current_page.last == item.slug %} class='active'{% endif %}>
+      <a href="{{ site.baseurl }}/{{ item.slug }}">{{ item.title }}</a>
+    </li>
+  {% endfor %}
+  </ul>
+</nav>
+
 <footer class="site-footer">
   <div class="wrapper">
     <a class="footer-logo" href="http://openbudgets.eu/">
