--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -5,6 +5,9 @@
     {% if site.twitter_username %}
     <a class="cd-twitter cd-img-replace" href="https://twitter.com/{{ site.twitter_username }}" rel="external">Twitter</a>
     {% endif %}
+    {% if site.linkedin %}
+    <a class="cd-linkedin cd-img-replace" href="https://www.linkedin.com/{{ site.linkedin }}" rel="external">LinkedIn</a>
+    {% endif %}
     {% if site.github_link %}
     <a class="cd-github cd-img-replace" href="https://github.com/{{ site.github_link }}" rel="external">Git Hub</a>
     {% endif %}
