--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,23 @@ layout: default
     </div>
     <div class="wrapper">
       <article>
-          {{ content }}
-          {% if page.meta %}
+        <div class="header">
+          <h1>{{ page.title }}</h1>
+          <p class="author">
+            {% if page.author %}{{ page.author }}{% if page.author_affiliation %} of <em>{% if page.author_affiliation_link %}<a href="{{ page.author_affiliation_link }}">{% endif %}{{ page.author_affiliation }}{% if page.author_affiliation_link %}</a>{% endif %}</em>{% endif %}{% endif %}
+          </p>
+          <p class="date">
+            {{ page.date | date: "%b %-d, %Y" }}
+          </p>
+        </div>
+        {% if page.meta %}
+        <div class="meta">
           {{ page.meta }}
-          {% endif %}
+        </div>
+        {% endif %}
+        <div class="content">
+          {{ content }}
+        </div>
       </article>
     </div>
 </div>
