--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <div class="wrapper">
         <a href="{{ "/" | prepend: site.baseurl }}" class="logo">
-            <img src="{{ "/img/openbudgets-logo.png" | prepend: site.baseurl }}" alt="OpenBudgets.eu">
+            <img src="{{ "/img/openbudgets-logo-white.png" | prepend: site.baseurl }}" alt="OpenBudgets.eu">
         </a>
         {% include social-links.html %}
         {% assign current_page = page.url | downcase | split: '/' %}
