--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -35,6 +35,10 @@ $base-border: 2px solid $base-border-color;
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow;
 
+// Header
+$header-colour: $primary;
+$header-text-colour: #fff;
+
 //Nav
 $nav-radius: 6px;
 $dropdown-bg: #fff;
