--- a/_sass/menu/_menu.scss
+++ b/_sass/menu/_menu.scss
@@ -289,28 +289,28 @@ Main components
 		padding: 0;
 		background-image: url('../img/cd-socials.svg');
 		background-repeat: no-repeat;
-		background-size: 160px 64px;
+		background-size: 160px 96px;
 		margin-right: .5em;
     border-radius: 32px;
 
 		&.cd-twitter {
-			background-position: 0 0;
+			background-position: 0 -64px;
 		}
 
 		&.cd-github {
-			background-position: -32px 0;
+			background-position: -32px -64px;
 		}
 
 		&.cd-facebook {
-			background-position: -64px 0;
+			background-position: -64px -64px;
 		}
 
 		&.cd-google {
-			background-position: -96px 0;
+			background-position: -96px -64px;
 		}
 
 		&.cd-linkedin {
-			background-position: -128px 0;
+			background-position: -128px -64px;
 		}
 
 		.no-touch &:hover {
