transparent banner image

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -23,9 +23,9 @@
                     left: 100%;
                     top: - $base-spacing * 2;
                     bottom: - $base-spacing * 2;
-                    background-image: url(../img/banner-image.png);
+                    background-image: url(../img/banner-image-transparent.png);
                     background-size: 388px auto;
-                    background-position: top left;
+                    background-position: 0 30px;
                     background-repeat: no-repeat;
                 }
 
