--- a/_sass/menu/_menu.scss
+++ b/_sass/menu/_menu.scss
@@ -290,7 +290,7 @@ Main components
 		background-image: url('../img/cd-socials.svg');
 		background-repeat: no-repeat;
 		background-size: 160px 96px;
-		margin-right: .5em;
+		margin-right: 1em;
     border-radius: 32px;
 
 		&.cd-twitter {
