less sidebar padding

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,9 +1,9 @@
 <section>
   <h4>Stay in the loop</h4>
   <p>
-    Don't mis an important update.
+    Don't mis an important update - sign up for our newsletter.
   </p>
-  <a href="http://eepurl.com/bObmsT">Sign up for our newsletter</a>
+  <a href="http://eepurl.com/bObmsT">Sign up</a>
 </section>
 
 {% if site.categories.news %}
