--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -67,6 +67,13 @@ picture {
               span {
                 font-size: 0.9em;
               }
+
+              & > a {
+                color: inherit;
+                display: block;
+                line-height: 1.3;
+                margin-top: $small-spacing;
+              }
             }
           }
         }
