add twitter feed

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -16,3 +16,10 @@
     {% endfor %}
 </section>
 {% endif %}
+
+{% if site.twitter_feed %}
+<section class="twitter-feed">
+  <h4>Twitter Feed</h4>
+  <div id="twitter"></div>
+</section>
+{% endif %}
