--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -57,7 +57,7 @@ picture {
           &.news-feed {
             div {
               padding-bottom: $small-spacing;
-              border-bottom: dotted 1px rgba($medium-gray, 0.5);
+              border-bottom: dotted 1px rgba($medium-gray, 0.3);
 
               h5 {
                 font-size: 1.1em;
@@ -73,8 +73,78 @@ picture {
                 display: block;
                 line-height: 1.3;
                 margin-top: $small-spacing;
+                font-size: 0.8em;
               }
             }
+          }
+
+          &.twitter-feed {
+            font-size: 0.8em;
+
+            li {
+              border-bottom: dotted 1px rgba($medium-gray, 0.3);
+              margin-bottom: $small-spacing/2;
+              padding-top: $small-spacing/2;
+              padding-left: 40px;
+            }
+
+            .user {
+
+              a {
+                color: inherit;
+                font-weight: bold;
+
+                span {
+                  &[data-scribe="element:screen_name"] {
+                    color: rgba($medium-gray, 0.5);
+                    font-weight: normal;
+                  }
+                }
+              }
+
+              img {
+                width: 32px;
+                margin-left: -40px;
+                float: left;
+                border-radius: 3px;
+                display: block;
+                margin-top: 3px;
+              }
+            }
+
+            .tweet {
+              margin-bottom: $small-spacing/2;
+              word-break: break-word;
+            }
+
+            .interact {
+              a {
+                display: inline-block;
+                @include hide-text;
+                width: 16px;
+                height: 16px;
+                background-size: auto 14px;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin-right: $small-spacing;
+                opacity: 0.4;
+
+                &.twitter_reply_icon {
+                  background-image: url('../img/reply.svg');
+                }
+                &.twitter_retweet_icon {
+                  background-image: url('../img/retweet.svg');
+                }
+                &.twitter_fav_icon {
+                  background-image: url('../img/heart.svg');
+                }
+
+                &:hover {
+                  opacity: 0.5;
+                }
+              }
+            }
+
           }
         }
       }
